# coil-generator

./: .flake8  .gitignore  README.md  coil_test2.py  pyproject.toml
.github/workflows/: release.yml  test.yml
.matplotlib-cache/: fontlist-v390.json
examples/: basic_demo.py
src/wedge_generator/: __init__.py  coil.py
tests/: test_coil.py
