[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "wedge-generator"
description = "Generate wedge coil PCB traces for PCB motor exploration."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Edward" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "matplotlib>=3.8",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "flake8",
  "pytest",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
fallback_version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["src/wedge_generator"]

[tool.pytest.ini_options]
pythonpath = ["src"]
